manifests/applications/memtly/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: memtly
  name: memtly
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: memtly
status:
  loadBalancer: {}
