manifests/applications/memtly/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memtly
  annotations:
    cert-manager.io/cluster-issuer: prod-issuer
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - memtly.alexbissessur.dev
    secretName: memtly-tls
  rules:
  - host: memtly.alexbissessur.dev
    http:
      paths:
      - backend:
          service:
            name: memtly
            port:
              number: 5000
        path: /
        pathType: Exact
status:
  loadBalancer: {}
